--- a/index.html
+++ b/index.html
@@ -7,46 +7,67 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header met logo en navigatie voor hoofdmenu -->
+    <!-- Header met logo en navigatie -->
     <header>
         <img src="https://media.discordapp.net/attachments/1198702297325244528/1296888692924874782/jdgames_logo.png?ex=67304577&is=672ef3f7&hm=d7633411486a4224e68af94f15939fdba91506d2d8e695fee9c7ae8a600658ee&=&format=webp&quality=lossless" alt="JD Games Logo" class="logo">
         <nav>
+            <a href="#home">Home</a>
             <a href="#informatie">Informatie</a>
             <a href="#contact">Contacteer ons</a>
+            <a href="#staff">Staff Team</a>
+            <a href="#regels">Regels</a>
         </nav>
     </header>
 
-    <!-- Hoofd Inhoud van de Pagina's -->
+    <!-- Hoofdinhoud van de pagina's -->
     <main>
+        <section id="home">
+            <div class="content-box">
+                <h1>Welkom op de JD Games Minecraft Server</h1>
+            </div>
+        </section>
+
         <section id="informatie">
             <div class="content-box">
-                <h1>⚔️Welkom op de JD Games Minecraft Server⚔️</h1>
-                <p>✈️IP-adres: Play.jdgames.nl<br>
-                   ⚡Versie: 1.21+<br>
-                   ⚔️Gamemode: Survival & Skyblock<br>
-                   ❄️Openings Tijden: 24/7<br>
+                <h2>Informatie</h2>
+                <p>✈️ IP-adres: Play.jdgames.nl<br>
+                   ⚡ Versie: 1.21+<br>
+                   ⚔️ Gamemode: Survival & Skyblock<br>
+                   ❄️ Openings Tijden: 24/7<br>
                    ☎️ Discord: <a href="https://discord.gg/9haVXV8gXT">Join onze Discord</a><br>
-                   ⛄Website: <a href="https://shop.jdgames.nl">shop.jdgames.nl</a>
+                   ⛄ Website: <a href="https://shop.jdgames.nl">shop.jdgames.nl</a>
                 </p>
             </div>
         </section>
 
         <section id="contact">
             <div class="content-box">
-                <h1>Contacteer ons</h1>
+                <h2>Contacteer ons</h2>
                 <p>☎️ Discord: Maak een ticket aan<br>
                    ☎️ Email: JDGamesOfficialYT@gmail.com
                 </p>
             </div>
         </section>
+
+        <section id="staff">
+            <div class="content-box">
+                <h2>Ontmoet Ons Team</h2>
+                <p><strong>Jonathan</strong> - Eigenaar</p>
+                <p><strong>David</strong> - Eigenaar</p>
+                <p><strong>Nisse</strong> - Management</p>
+            </div>
+        </section>
+
+        <section id="regels">
+            <div class="content-box">
+                <h2>Server Regels</h2>
+                <p>Kies tussen de serverregels voor <a href="#factions">Factions</a> of <a href="#skyblock">Skyblock</a>.</p>
+            </div>
+        </section>
     </main>
 
-    <!-- Footer met links naar Staff Team en Regels pagina's -->
+    <!-- Footer -->
     <footer>
-        <nav>
-            <a href="#staff-team">Staff Team</a>
-            <a href="#regels">Regels</a>
-        </nav>
         <p>© 2024 JD Games. Alle rechten voorbehouden. JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
