--- a/index.html
+++ b/index.html
@@ -3,72 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JD Games Minecraft Server</title>
+    <title>Welkom - JDGames Minecraft Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header met logo en navigatie -->
     <header>
-        <img src="https://media.discordapp.net/attachments/1198702297325244528/1296888692924874782/jdgames_logo.png?ex=67304577&is=672ef3f7&hm=d7633411486a4224e68af94f15939fdba91506d2d8e695fee9c7ae8a600658ee&=&format=webp&quality=lossless" alt="JD Games Logo" class="logo">
         <nav>
-            <a href="#home">Home</a>
-            <a href="#informatie">Informatie</a>
-            <a href="#contact">Contacteer ons</a>
-            <a href="#staff">Staff Team</a>
-            <a href="#regels">Regels</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="informatie.html">Informatie</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
-    <!-- Hoofdinhoud van de pagina's -->
     <main>
-        <section id="home">
-            <div class="content-box">
-                <h1>Welkom op de JD Games Minecraft Server</h1>
-            </div>
-        </section>
+        <section class="section">
+            <div class="container">
+                <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
 
-        <section id="informatie">
-            <div class="content-box">
-                <h2>Informatie</h2>
-                <p>✈️ IP-adres: Play.jdgames.nl<br>
-                   ⚡ Versie: 1.21+<br>
-                   ⚔️ Gamemode: Survival & Skyblock<br>
-                   ❄️ Openings Tijden: 24/7<br>
-                   ☎️ Discord: <a href="https://discord.gg/9haVXV8gXT">Join onze Discord</a><br>
-                   ⛄ Website: <a href="https://shop.jdgames.nl">shop.jdgames.nl</a>
-                </p>
-            </div>
-        </section>
+                <div class="info">
+                    <h2>Informatie Over ons:</h2>
+                    <ul>
+                        <li>✈️ <strong>IP-adres:</strong> Play.jdgames.nl</li>
+                        <li>⚡ <strong>Versie:</strong> 1.21+</li>
+                        <li>⚔️ <strong>Gamemode:</strong> Survival & Skyblock</li>
+                        <li>❄️ <strong>Openings Tijden:</strong> 24/7</li>
+                        <li>☎️ <strong>Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier om te joinen</a></li>
+                        <li>⛄ <strong>Website:</strong> <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+                    </ul>
+                </div>
 
-        <section id="contact">
-            <div class="content-box">
-                <h2>Contacteer ons</h2>
-                <p>☎️ Discord: Maak een ticket aan<br>
-                   ☎️ Email: JDGamesOfficialYT@gmail.com
-                </p>
-            </div>
-        </section>
-
-        <section id="staff">
-            <div class="content-box">
-                <h2>Ontmoet Ons Team</h2>
-                <p><strong>Jonathan</strong> - Eigenaar</p>
-                <p><strong>David</strong> - Eigenaar</p>
-                <p><strong>Nisse</strong> - Management</p>
-            </div>
-        </section>
-
-        <section id="regels">
-            <div class="content-box">
-                <h2>Server Regels</h2>
-                <p>Kies tussen de serverregels voor <a href="#factions">Factions</a> of <a href="#skyblock">Skyblock</a>.</p>
+                <div class="contact">
+                    <h2>Contacteer ons:</h2>
+                    <ul>
+                        <li>☎️ <strong>Discord:</strong> Maak een ticket aan</li>
+                        <li>☎️ <strong>Email:</strong> <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
-        <p>© 2024 JD Games. Alle rechten voorbehouden. JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
+        <p>&copy; 2024 JDGames. Alle rechten voorbehouden.</p>
     </footer>
 </body>
 </html>
