--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="informatie.html">Informatie</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html"><img src="logo.png" alt="JDGames Logo" class="logo"> Home</a></li>
+                <li><a href="staff.html">Staff Team</a></li>
+                <li><a href="regels.html">Regels</a></li>
             </ul>
         </nav>
     </header>
