--- a/staff.html
+++ b/staff.html
@@ -3,37 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staff Team | JD Games</title>
+    <title>Staff Team - JDGames</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="https://media.discordapp.net/attachments/1198702297325244528/1296888692924874782/jdgames_logo.png?ex=67304577&is=672ef3f7&hm=d7633411486a4224e68af94f15939fdba91506d2d8e695fee9c7ae8a600658ee&=&format=webp&quality=lossless" alt="JD Games Logo">
-        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="staff.html">Staff Team</a></li>
-                <li><a href="rules.html">Regels</a></li>
+                <li><a href="index.html"><img src="logo.png" alt="JDGames Logo" class="logo"> Home</a></li>
+                <li><a href="staff.html" class="active">Staff Team</a></li>
+                <li><a href="regels.html">Regels</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="staff">
-        <h2>✈️ Welkom bij JD Games - Ontmoet Ons Team</h2>
-        <p>Geachte Spelers,</p>
-        <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
-        
-        <h3>Ons Team</h3>
-        <p><strong>Jonathan - Eigenaar</strong><br>Als oprichter en servereigenaar is Jonathan verantwoordelijk voor betalingen en helpt het development team. Hij is ook onderdeel van het Sollicitatie Coördinator en zal sollicitaties nakijken.</p>
-        <p><strong>David - Eigenaar</strong><br>Als oprichter en servereigenaar is David verantwoordelijk voor betalingen en helpt de staffleden / spelers. Hij zal ook als Staff Coördinator opletten op staff klachten & Refund Tickets.</p>
-        <p><strong>Nisse - Management</strong><br>Nisse is lid van het management team en hoofd van het development team. Hij ontwikkelt plugins & gebouwen voor onze server en is ook onderdeel van het Sollicitatie Coördinator.</p>
-    </section>
+    <main>
+        <section class="section">
+            <div class="container">
+                <h1>✈️ Welkom bij JD Games - Ontmoet Ons Team ✈️</h1>
+                <p>Geachte Spelers,</p>
+                <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
+
+                <h2>Ons Team</h2>
+
+                <div class="staff-lid">
+                    <div class="staff-avatar">
+                        <img src="staff1.jpg" alt="Jonathan">
+                    </div>
+                    <div class="staff-info">
+                        <h3>Jonathan - Eigenaar</h3>
+                        <p><strong>Functie:</strong> Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+                    </div>
+                </div>
+
+                <div class="staff-lid">
+                    <div class="staff-avatar">
+                        <img src="staff2.jpg" alt="David">
+                    </div>
+                    <div class="staff-info">
+                        <h3>David - Eigenaar</h3>
+                        <p><strong>Functie:</strong> Als oprichter en servereigenaar is David verantwoordelijk voor de betalingen en het helpen van de staffleden / Spelers. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+                    </div>
+                </div>
+
+                <div class="staff-lid">
+                    <div class="staff-avatar">
+                        <img src="staff3.jpg" alt="Nisse">
+                    </div>
+                    <div class="staff-info">
+                        <h3>Nisse - Management</h3>
+                        <p><strong>Functie:</strong> Nisse is lid van ons management team en ons Hoofd Development team. Zijn verantwoordelijkheid is het developen en bouwen van plugins & gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
-        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
+        <p>&copy; 2024 JDGames. Alle rechten voorbehouden.</p>
     </footer>
 </body>
 </html>
