--- a/index.html
+++ b/index.html
@@ -3,50 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welkom - JDGames Minecraft Server</title>
+    <title>JD Games - Minecraft Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html"><img src="logo.png" alt="JDGames Logo" class="logo"> Home</a></li>
-                <li><a href="staff.html">Staff Team</a></li>
-                <li><a href="regels.html">Regels</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <img src="logo.png" alt="JD Games Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#informatie">Informatie</a></li>
+                    <li><a href="staff.html">Staff Team</a></li>
+                    <li><a href="regels.html">Regels</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <section class="section">
+        <section id="informatie" class="section">
             <div class="container">
-                <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+                <h1>⚔️Welkom op de JD Games Minecraft Server⚔️</h1>
+                <h2>Informatie Over ons:</h2>
+                <p>✈️ IP-adres: Play.jdgames.nl</p>
+                <p>⚡ Versie: 1.21+</p>
+                <p>⚔️ Gamemode: Survival & Skyblock</p>
+                <p>❄️ Openings Tijden: 24/7</p>
+                <p>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">https://discord.gg/9haVXV8gXT</a></p>
+                <p>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></p>
 
-                <div class="info">
-                    <h2>Informatie Over ons:</h2>
-                    <ul>
-                        <li>✈️ <strong>IP-adres:</strong> Play.jdgames.nl</li>
-                        <li>⚡ <strong>Versie:</strong> 1.21+</li>
-                        <li>⚔️ <strong>Gamemode:</strong> Survival & Skyblock</li>
-                        <li>❄️ <strong>Openings Tijden:</strong> 24/7</li>
-                        <li>☎️ <strong>Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier om te joinen</a></li>
-                        <li>⛄ <strong>Website:</strong> <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
-                    </ul>
-                </div>
-
-                <div class="contact">
-                    <h2>Contacteer ons:</h2>
-                    <ul>
-                        <li>☎️ <strong>Discord:</strong> Maak een ticket aan</li>
-                        <li>☎️ <strong>Email:</strong> <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
-                    </ul>
-                </div>
+                <h2>Contacteer ons:</h2>
+                <p>☎️ Discord: Maak een ticket aan</p>
+                <p>☎️ Email: <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></p>
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 JDGames. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
 </html>
