--- a/staff.html
+++ b/staff.html
@@ -3,65 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staff Team - JDGames</title>
+    <title>Staff Team - JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html"><img src="logo.png" alt="JDGames Logo" class="logo"> Home</a></li>
-                <li><a href="staff.html" class="active">Staff Team</a></li>
-                <li><a href="regels.html">Regels</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <img src="logo.png" alt="JD Games Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="regels.html">Regels</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section class="section">
             <div class="container">
-                <h1>✈️ Welkom bij JD Games - Ontmoet Ons Team ✈️</h1>
+                <h1>✈️ Welkom bij JD Games - Ontmoet Ons Team</h1>
+
                 <p>Geachte Spelers,</p>
                 <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
 
                 <h2>Ons Team</h2>
+                <h3>Jonathan - Eigenaar</h3>
+                <p>Functie: Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Hij is als Staff Coördinator verantwoordelijk voor het opletten en reageren op staff klachten & Refund Tickets.</p>
 
-                <div class="staff-lid">
-                    <div class="staff-avatar">
-                        <img src="staff1.jpg" alt="Jonathan">
-                    </div>
-                    <div class="staff-info">
-                        <h3>Jonathan - Eigenaar</h3>
-                        <p><strong>Functie:</strong> Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-                    </div>
-                </div>
+                <h3>David - Eigenaar</h3>
+                <p>Functie: Als oprichter en servereigenaar is David verantwoordelijk voor de betalingen en het helpen van de staffleden / Spelers. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Hij is als Staff Coördinator verantwoordelijk voor het opletten en reageren op staff klachten & Refund Tickets.</p>
 
-                <div class="staff-lid">
-                    <div class="staff-avatar">
-                        <img src="staff2.jpg" alt="David">
-                    </div>
-                    <div class="staff-info">
-                        <h3>David - Eigenaar</h3>
-                        <p><strong>Functie:</strong> Als oprichter en servereigenaar is David verantwoordelijk voor de betalingen en het helpen van de staffleden / Spelers. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-                    </div>
-                </div>
-
-                <div class="staff-lid">
-                    <div class="staff-avatar">
-                        <img src="staff3.jpg" alt="Nisse">
-                    </div>
-                    <div class="staff-info">
-                        <h3>Nisse - Management</h3>
-                        <p><strong>Functie:</strong> Nisse is lid van ons management team en ons Hoofd Development team. Zijn verantwoordelijkheid is het developen en bouwen van plugins & gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-                    </div>
-                </div>
-
+                <h3>Nisse - Management</h3>
+                <p>Functie: Nisse is lid van ons management team en het Hoofd Development team. Zijn verantwoordelijkheid is het developen en bouwen van plugins & Gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Hij is als Staff Coördinator verantwoordelijk voor het opletten en reageren op staff klachten & Refund Tickets.</p>
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 JDGames. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
 </html>
