--- a/regels.html
+++ b/regels.html
@@ -3,151 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regels - JDGames</title>
+    <title>Regels - JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html"><img src="logo.png" alt="JDGames Logo" class="logo"> Home</a></li>
-                <li><a href="staff.html">Staff Team</a></li>
-                <li><a href="regels.html" class="active">Regels</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <img src="logo.png" alt="JD Games Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="staff.html">Staff Team</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section class="section">
             <div class="container">
-                <h1>⚔️ Regels voor de JD Games Minecraft Server ⚔️</h1>
-                <p>Maak een keuze voor de specifieke regels:</p>
+                <h1>⚔️ Regels - JD Games ⚔️</h1>
 
-                <!-- Dropdown voor keuzemenu -->
-                <div class="keuze-menu">
-                    <label for="keuze">Kies de gamemode:</label>
-                    <select id="keuze" onchange="showRules(this.value)">
-                        <option value="">Selecteer een gamemode</option>
-                        <option value="factions">Factions Regels</option>
-                        <option value="skyblock">Skyblock Regels</option>
-                    </select>
-                </div>
+                <p>Welkom op de regels pagina van JD Games! Kies een van de onderstaande opties om de specifieke regels voor de game modes te bekijken.</p>
 
-                <!-- Sectie voor Factions Regels -->
-                <div id="factions-regels" class="regels-sectie" style="display:none;">
-                    <h2>⚔️ Faction Server Reglement ⚔️</h2>
-                    <div class="regels-content">
-                        <h3>Artikel 1 - Geen Hacks</h3>
-                        <ul>
-                            <li>1.1 Het gebruik van hacks, cheats of exploits die een oneerlijk voordeel bieden in de gameplay is ten strengste verboden.</li>
-                            <li>1.2 Het gebruik maken van X-ray is wel Toegestaan.</li>
-                        </ul>
-
-                        <h3>Artikel 2 - Schelden met Ziekten</h3>
-                        <ul>
-                            <li>2.1 Beledigingen of scheldwoorden die betrekking hebben op ziektes of aandoeningen zijn niet toegestaan.</li>
-                            <li>2.2 Dit soort gedrag wordt beschouwd als ongepast en kan leiden tot sancties.</li>
-                        </ul>
-
-                        <h3>Artikel 3 - Zelfpromotie</h3>
-                        <ul>
-                            <li>3.1 Het adverteren van andere servers, persoonlijke projecten of diensten zonder voorafgaande toestemming van de serverstaff is verboden.</li>
-                            <li>3.2 Dit geldt ook voor het spammen van links in de chat.</li>
-                        </ul>
-
-                        <h3>Artikel 4 - Bugs Melden</h3>
-                        <ul>
-                            <li>4.1 Het misbruik van bugs of glitches in de game of server is niet toegestaan.</li>
-                            <li>4.2 Spelers zijn verplicht om ontdekte bugs onmiddellijk te melden aan de serverstaff om de integriteit van de server te waarborgen.</li>
-                        </ul>
-
-                        <h3>Artikel 5 - Luisteren naar Staff</h3>
-                        <ul>
-                            <li>5.1 Spelers dienen altijd de instructies en beslissingen van de serverstaff te respecteren en op te volgen.</li>
-                            <li>5.2 Het negeren of in diskrediet brengen van de staff kan resulteren in sancties.</li>
-                        </ul>
-
-                        <h3>Sancties voor Overtredingen</h3>
-                        <p>Bij overtredingen van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban of permanente bans, afhankelijk van de ernst van de overtreding. Elk staff lid heeft het recht om zelf te bepalen welke straf voor jou gepast is. Als jij het niet eens bent met deze straf kunt u altijd een ticket aan maken.</p>
-                    </div>
-                </div>
-
-                <!-- Sectie voor Skyblock Regels -->
-                <div id="skyblock-regels" class="regels-sectie" style="display:none;">
-                    <h2>⚡ Skyblock Server Reglement ⚡</h2>
-                    <div class="regels-content">
-                        <h3>Artikel 1 - Geen Griefing of Diefstal</h3>
-                        <ul>
-                            <li>1.1 Het is verboden om de eigendommen van andere spelers opzettelijk te vernietigen of schade toe te brengen aan hun eilanden.</li>
-                            <li>1.2 Het stelen van items of middelen van andere spelers is niet toegestaan.</li>
-                            <li>1.3 Samenwerken is toegestaan.</li>
-                        </ul>
-
-                        <h3>Artikel 2 - Geen Hacks, Cheats of Exploits</h3>
-                        <ul>
-                            <li>2.1 Het gebruik van hacks of exploits die een oneerlijk voordeel bieden, zoals fly hacks, x-ray, of autoclickers, is strikt verboden.</li>
-                            <li>2.2 Alleen visuele mods (zoals shaders en texture packs) zijn toegestaan, mits deze geen invloed hebben op de gameplay.</li>
-                            <li>2.3 Het misbruik van bugs of exploits binnen het spel of server is verboden en moet direct worden gemeld aan het staffteam.</li>
-                        </ul>
-
-                        <h3>Artikel 3 - Respect en Gedrag</h3>
-                        <ul>
-                            <li>3.1 Beledigingen, scheldwoorden, racisme, discriminatie, en elke vorm van intimidatie zijn verboden.</li>
-                            <li>3.2 Wees beleefd in de chat en gebruik geen agressieve of toxische taal.</li>
-                            <li>3.3 Respecteer de serverstaff en hun beslissingen; ze zijn er om de speelervaring voor iedereen te verbeteren.</li>
-                        </ul>
-
-                        <h3>Artikel 4 - Geen Spam of Reclame</h3>
-                        <ul>
-                            <li>4.1 Spammen van berichten, commando's, of willekeurige tekens in de chat is niet toegestaan.</li>
-                            <li>4.2 Het adverteren van andere servers of producten zonder toestemming van het serverteam is verboden.</li>
-                        </ul>
-
-                        <h3>Artikel 5 - Gebruik van Meerder Accounts</h3>
-                        <ul>
-                            <li>5.1 Het is niet toegestaan om meerdere accounts te gebruiken om oneerlijke voordelen te behalen, zoals extra beloningen of middelen.</li>
-                            <li>5.2 Het creëren van "alt accounts" om bans te ontwijken zal resulteren in een permanente verbanning van beide accounts.</li>
-                        </ul>
-
-                        <h3>Artikel 6 - Eerlijke Handel</h3>
-                        <ul>
-                            <li>6.1 Handel tussen spelers moet eerlijk en transparant verlopen. Scammen van andere spelers is ten strengste verboden.</li>
-                            <li>6.2 Gebruik de door de server geboden handelsmogelijkheden om veilige transacties te garanderen.</li>
-                        </ul>
-
-                        <h3>Artikel 7 - Eiland Beheer</h3>
-                        <ul>
-                            <li>7.1 Elk eiland is het eigendom van de eigenaar. Teamleden moeten de rechten en beslissingen van de eigenaar respecteren.</li>
-                            <li>7.2 Het verlaten van een team zonder toestemming of het ontnemen van eigendommen zonder overleg met de eigenaar is toegestaan. Het meenemen van eigen spullen is daarbij ook toegestaan.</li>
-                        </ul>
-
-                        <h3>Overtredingen en Sancties</h3>
-                        <p>Bij overtreding van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke schorsingen of een permanente ban.</p>
-                        <p>Elke staff lid heeft het recht om zelf te bepalen welke straf voor jou gepast is. Als jij het niet eens bent met deze straf kunt u altijd een ticket aan maken.</p>
-                    </div>
+                <div class="keuze">
+                    <a href="regels/skyblock.html" class="button">Skyblock Regels</a>
+                    <a href="regels/factions.html" class="button">Factions Regels</a>
                 </div>
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 JDGames. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
-
-    <script>
-        // Functie om de juiste regels te tonen op basis van de gekozen gamemode
-        function showRules(value) {
-            // Verberg beide regels secties
-            document.getElementById("factions-regels").style.display = "none";
-            document.getElementById("skyblock-regels").style.display = "none";
-
-            // Toon de juiste sectie op basis van de keuze
-            if (value === "factions") {
-                document.getElementById("factions-regels").style.display = "block";
-            } else if (value === "skyblock") {
-                document.getElementById("skyblock-regels").style.display = "block";
-            }
-        }
-    </script>
 </body>
 </html>
