--- a/skyblock_rules.html
+++ b/skyblock_rules.html
@@ -3,35 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyblock Regels | JD Games</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Skyblock Regels - JD Games</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="https://media.discordapp.net/attachments/1198702297325244528/1296888692924874782/jdgames_logo.png?ex=67304577&is=672ef3f7&hm=d7633411486a4224e68af94f15939fdba91506d2d8e695fee9c7ae8a600658ee&=&format=webp&quality=lossless" alt="JD Games Logo">
+        <div class="container">
+            <div class="logo">
+                <img src="../logo.png" alt="JD Games Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../staff.html">Staff Team</a></li>
+                    <li><a href="../regels.html">Regels</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="staff.html">Staff Team</a></li>
-                <li><a href="rules.html">Regels</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <section id="skyblock_rules">
-        <h2>⚡ Skyblock Server Reglement ⚡</h2>
-        <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven.</p>
-        <ul>
-            <li><strong>Artikel 1 - Geen Griefing:</strong> Het vernietigen of stelen van eigendommen is verboden.</li>
-            <li><strong>Artikel 2 - Geen Hacks:</strong> Het gebruik van hacks of cheats is verboden.</li>
-            <li><strong>Artikel 3 - Respect en Gedrag:</strong> Beledigingen, racisme, en intimidatie zijn verboden.</li>
-            <li><strong>Artikel 4 - Geen Spam:</strong> Spammen in de chat is verboden.</li>
-            <li><strong>Artikel 5 - Eerlijke Handel:</strong> Scammen is verboden.</li>
-        </ul>
-    </section>
+    <main>
+        <section class="section">
+            <div class="container">
+                <h1>⚡ Skyblock Server Reglement ⚡</h1>
+                <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke schorsingen of een permanente ban.</p>
 
+                <h2>Artikel 1 - Geen Griefing of Diefstal</h2>
+                <ul>
+                    <li>1.1 Het is verboden om de eigendommen van andere spelers opzettelijk te vernietigen of schade toe te brengen aan hun eilanden.</li>
+                    <li>1.2 Het stelen van items of middelen van andere spelers is niet toegestaan.</li>
+                    <li>1.3 Samenwerken is toegestaan.</li>
+                </ul>
+
+                <h2>Artikel 2 - Geen Hacks, Cheats of Exploits</h2>
+                <ul>
+                    <li>2.1 Het gebruik van hacks of exploits die een oneerlijk voordeel bieden, zoals fly hacks, x-ray, of autoclickers, is strikt verboden.</li>
+                    <li>2.2 Alleen visuele mods (zoals shaders en texture packs) zijn toegestaan, mits deze geen invloed hebben op de gameplay.</li>
+                    <li>2.3 Het misbruik van bugs of exploits binnen het spel of server is verboden en moet direct worden gemeld aan het staffteam.</li>
+                </ul>
+
+                <h2>Artikel 3 - Respect en Gedrag</h2>
+                <ul>
+                    <li>3.1 Beledigingen, scheldwoorden, racisme, discriminatie, en elke vorm van intimidatie zijn verboden.</li>
+                    <li>3.2 Wees beleefd in de chat en gebruik geen agressieve of toxische taal.</li>
+                    <li>3.3 Respecteer de serverstaff en hun beslissingen; ze zijn er om de speelervaring voor iedereen te verbeteren.</li>
+                </ul>
+
+                <h2>Artikel 4 - Geen Spam of Reclame</h2>
+                <ul>
+                    <li>4.1 Spammen van berichten, commando's, of willekeurige tekens in de chat is niet toegestaan.</li>
+                    <li>4.2 Het adverteren van andere servers of producten zonder toestemming van het serverteam is verboden.</li>
+                </ul>
+
+                <h2>Artikel 5 - Gebruik van Meerder Accounts</h2>
+                <ul>
+                    <li>5.1 Het is niet toegestaan om meerdere accounts te gebruiken om oneerlijke voordelen te behalen, zoals extra beloningen of middelen.</li>
+                    <li>5.2 Het creëren van "alt accounts" om bans te ontwijken zal resulteren in een permanente verbanning van beide accounts.</li>
+                </ul>
+
+                <h2>Artikel 6 - Eerlijke Handel</h2>
+                <ul>
+                    <li>6.1 Handel tussen spelers moet eerlijk en transparant verlopen. Scammen van andere spelers is ten strengste verboden.</li>
+                    <li>6.2 Gebruik de door de server geboden handelsmogelijkheden om veilige transacties te garanderen.</li>
+                </ul>
+
+                <h2>Artikel 7 - Eiland Beheer</h2>
+                <ul>
+                    <li>7.1 Elk eiland is het eigendom van de eigenaar. Teamleden moeten de rechten en beslissingen van de eigenaar respecteren.</li>
+                    <li>7.2 Het verlaten van een team zonder toestemming of het ontnemen van eigendommen zonder overleg met de eigenaar is toegestaan. Het meenemen van eigen spullen is daarbij ook toegestaan.</li>
+                </ul>
+
+                <h3>Overtredingen en Sancties</h3>
+                <p>Bij overtreding van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban, of permanente bans, afhankelijk van de ernst van de overtreding. Elk staff lid heeft het recht om zelf te bepalen welke straf voor jou gepast is. Als jij het niet eens bent met deze straf kunt u altijd een ticket aan maken.</p>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
