--- a/factions_rules.html
+++ b/factions_rules.html
@@ -3,35 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factions Regels | JD Games</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Factions Regels - JD Games</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="https://media.discordapp.net/attachments/1198702297325244528/1296888692924874782/jdgames_logo.png?ex=67304577&is=672ef3f7&hm=d7633411486a4224e68af94f15939fdba91506d2d8e695fee9c7ae8a600658ee&=&format=webp&quality=lossless" alt="JD Games Logo">
+        <div class="container">
+            <div class="logo">
+                <img src="../logo.png" alt="JD Games Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../staff.html">Staff Team</a></li>
+                    <li><a href="../regels.html">Regels</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="staff.html">Staff Team</a></li>
-                <li><a href="rules.html">Regels</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <section id="factions_rules">
-        <h2>⚔️ Faction Server Reglement ⚔️</h2>
-        <p>Om een eerlijke, veilige en plezierige speelervaring te waarborgen, dienen alle spelers de volgende regels na te leven.</p>
-        <ul>
-            <li><strong>Artikel 1 - Geen Hacks:</strong> Het gebruik van hacks of cheats is verboden.</li>
-            <li><strong>Artikel 2 - Schelden met Ziekten:</strong> Beledigingen met ziektes zijn niet toegestaan.</li>
-            <li><strong>Artikel 3 - Zelfpromotie:</strong> Zelfpromotie zonder toestemming is verboden.</li>
-            <li><strong>Artikel 4 - Bugs Melden:</strong> Misbruik van bugs is verboden.</li>
-            <li><strong>Artikel 5 - Luisteren naar Staff:</strong> Respecteer altijd de staff.</li>
-        </ul>
-    </section>
+    <main>
+        <section class="section">
+            <div class="container">
+                <h1>⚔️ Faction Server Reglement ⚔️</h1>
+                <p>Om een eerlijke, veilige en plezierige speelervaring te waarborgen, dienen alle spelers de volgende regels na te leven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke ban of permanente bans.</p>
 
+                <h2>Artikel 1 - Geen Hacks</h2>
+                <ul>
+                    <li>1.1 Het gebruik van hacks, cheats of exploits die een oneerlijk voordeel bieden in de gameplay is ten strengste verboden.</li>
+                    <li>1.2 Het gebruik maken van X-ray is wel toegestaan.</li>
+                </ul>
+
+                <h2>Artikel 2 - Schelden met Ziekten</h2>
+                <ul>
+                    <li>2.1 Beledigingen of scheldwoorden die betrekking hebben op ziektes of aandoeningen zijn niet toegestaan.</li>
+                    <li>2.2 Dit soort gedrag wordt beschouwd als ongepast en kan leiden tot sancties.</li>
+                </ul>
+
+                <h2>Artikel 3 - Zelfpromotie</h2>
+                <ul>
+                    <li>3.1 Het adverteren van andere servers, persoonlijke projecten of diensten zonder voorafgaande toestemming van de serverstaff is verboden.</li>
+                    <li>3.2 Dit geldt ook voor het spammen van links in de chat.</li>
+                </ul>
+
+                <h2>Artikel 4 - Bugs Melden</h2>
+                <ul>
+                    <li>4.1 Het misbruik van bugs of glitches in de game of server is niet toegestaan.</li>
+                    <li>4.2 Spelers zijn verplicht om ontdekte bugs onmiddellijk te melden aan de serverstaff om de integriteit van de server te waarborgen.</li>
+                </ul>
+
+                <h2>Artikel 5 - Luisteren naar Staff</h2>
+                <ul>
+                    <li>5.1 Spelers dienen altijd de instructies en beslissingen van de serverstaff te respecteren en op te volgen.</li>
+                    <li>5.2 Het negeren of in diskrediet brengen van de staff kan resulteren in sancties.</li>
+                </ul>
+
+                <h3>Sancties voor Overtredingen</h3>
+                <p>Bij overtredingen van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban of permanente bans, afhankelijk van de ernst van de overtreding. Elk staff lid heeft het recht om zelf te bepalen welke straf voor jou gepast is. Als jij het niet eens bent met deze straf kunt u altijd een ticket aan maken.</p>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
