--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="staff.html">Staff Team</a></li>
+                    <li><a href="staff.html">Ons Team</a></li>
                     <li><a href="regels.html">Regels</a></li>
                 </ul>
             </nav>
