--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo.png" alt="JD Games Logo">
+                <!-- Ingebed logo in plaats van een externe afbeelding -->
+                <h1>JD Games</h1> <!-- Vervang dit met een inline afbeelding als je dat wilt -->
             </div>
             <nav>
                 <ul>
