--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welkom op JD Games Minecraft Server</title>
+    <title>JD Games - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <!-- Ingebed logo in plaats van een externe afbeelding -->
-                <h1>JD Games</h1> <!-- Vervang dit met een inline afbeelding als je dat wilt -->
+                <img src="logo.png" alt="JD Games Logo">
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="staff.html">Ons Team</a></li>
+                    <li><a href="staff.html">Staff Team</a></li>
                     <li><a href="regels.html">Regels</a></li>
                 </ul>
             </nav>
@@ -26,60 +25,28 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+                <h1>⚔️Welkom op de JD Games Minecraft Server⚔️</h1>
 
-                <div class="informatie">
-                    <h2>Informatie Over Ons:</h2>
+                <!-- Informatie Over Ons -->
+                <div class="info-section">
+                    <h2>✈️ Informatie Over Ons:</h2>
                     <ul>
                         <li><strong>IP-adres:</strong> Play.jdgames.nl</li>
-                        <li><strong>Versie:</strong> 1.21+</li>
-                        <li><strong>Gamemode:</strong> Survival & Skyblock</li>
-                        <li><strong>Openings Tijden:</strong> 24/7</li>
-                        <li><strong>Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">https://discord.gg/9haVXV8gXT</a></li>
-                        <li><strong>Website:</strong> <a href="shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+                        <li><strong>⚡ Versie:</strong> 1.21+</li>
+                        <li><strong>⚔️ Gamemode:</strong> Survival & Skyblock</li>
+                        <li><strong>❄️ Openings Tijden:</strong> 24/7</li>
+                        <li><strong>☎️ Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">https://discord.gg/9haVXV8gXT</a></li>
+                        <li><strong>⛄ Website:</strong> <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
                     </ul>
+                </div>
 
-                    <h2>Contacteer Ons:</h2>
+                <!-- Contacteer ons -->
+                <div class="contact-section">
+                    <h2>📞 Contacteer ons:</h2>
                     <ul>
-                        <li><strong>Discord:</strong> Maak een ticket aan</li>
-                        <li><strong>Email:</strong> JDGamesOfficialYT@gmail.com</li>
+                        <li><strong>☎️ Discord:</strong> Maak een ticket aan</li>
+                        <li><strong>📧 Email:</strong> <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
                     </ul>
-                </div>
-            </div>
-        </section>
-
-        <section class="section">
-            <div class="container">
-                <h2>⚔️ Ons Staff Team ⚔️</h2>
-                <p>Maak kennis met het team dat achter de JD Games server staat.</p>
-
-                <div class="staff">
-                    <div class="staff-member">
-                        <h3>Jonathan - Eigenaar</h3>
-                        <p><strong>Functie:</strong> Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-                    </div>
-
-                    <div class="staff-member">
-                        <h3>David - Eigenaar</h3>
-                        <p><strong>Functie:</strong> Als oprichter en servereigenaar is David verantwoordelijk voor de betalingen en het helpen van de staffleden/spelers, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-                    </div>
-
-                    <div class="staff-member">
-                        <h3>Nisse - Management</h3>
-                        <p><strong>Functie:</strong> Nisse is lid van ons management team en ons Hoofd Development team, Zijn verantwoordelijkheid is het developen en bouwen van plugins & Gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section">
-            <div class="container">
-                <h2>⚡ Regels - JD Games ⚡</h2>
-                <p>Klik hieronder om de regels van de verschillende gamemodi te bekijken:</p>
-
-                <div class="keuze">
-                    <a href="regels/skyblock.html" class="button">Skyblock Regels</a>
-                    <a href="regels/factions.html" class="button">Factions Regels</a>
                 </div>
             </div>
         </section>
