--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JD Games - Home</title>
+    <title>JD Games Minecraft Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,34 +25,26 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1>⚔️Welkom op de JD Games Minecraft Server⚔️</h1>
+                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+                <p>Informatie Over ons:</p>
+                <ul>
+                    <li>✈️ IP-adres: Play.jdgames.nl</li>
+                    <li>⚡ Versie: 1.21+</li>
+                    <li>⚔️ Gamemode: Survival & Skyblock</li>
+                    <li>❄️ Openings Tijden: 24/7</li>
+                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT">https://discord.gg/9haVXV8gXT</a></li>
+                    <li>⛄ Website: <a href="shop.jdgames.nl">shop.jdgames.nl</a></li>
+                </ul>
 
-                <!-- Informatie Over Ons -->
-                <div class="info-section">
-                    <h2>✈️ Informatie Over Ons:</h2>
-                    <ul>
-                        <li><strong>IP-adres:</strong> Play.jdgames.nl</li>
-                        <li><strong>⚡ Versie:</strong> 1.21+</li>
-                        <li><strong>⚔️ Gamemode:</strong> Survival & Skyblock</li>
-                        <li><strong>❄️ Openings Tijden:</strong> 24/7</li>
-                        <li><strong>☎️ Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">https://discord.gg/9haVXV8gXT</a></li>
-                        <li><strong>⛄ Website:</strong> <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
-                    </ul>
-                </div>
-
-                <!-- Contacteer ons -->
-                <div class="contact-section">
-                    <h2>📞 Contacteer ons:</h2>
-                    <ul>
-                        <li><strong>☎️ Discord:</strong> Maak een ticket aan</li>
-                        <li><strong>📧 Email:</strong> <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
-                    </ul>
-                </div>
+                <h2>Contacteer ons:</h2>
+                <ul>
+                    <li>☎️ Discord: Maak een ticket aan</li>
+                    <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
+                </ul>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
