--- a/regels.html
+++ b/regels.html
@@ -16,6 +16,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="staff.html">Staff Team</a></li>
+                    <li><a href="regels.html">Regels</a></li>
                 </ul>
             </nav>
         </div>
@@ -24,19 +25,25 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1>⚔️ Regels - JD Games ⚔️</h1>
+                <h1 class="page-title">⚔️ Regels - JD Games ⚔️</h1>
+                <h2>Skyblock Server Reglement</h2>
+                <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke schorsingen of een permanente ban.</p>
 
-                <p>Welkom op de regels pagina van JD Games! Kies een van de onderstaande opties om de specifieke regels voor de game modes te bekijken.</p>
+                <h3>Artikel 1 - Geen Griefing of Diefstal</h3>
+                <ul>
+                    <li>1.1 Het is verboden om de eigendommen van andere spelers opzettelijk te vernietigen of schade toe te brengen aan hun eilanden.</li>
+                    <li>1.2 Het stelen van items of middelen van andere spelers is niet toegestaan.</li>
+                    <li>1.3 Samenwerken is toegestaan.</li>
+                </ul>
 
-                <div class="keuze">
-                    <a href="regels/skyblock.html" class="button">Skyblock Regels</a>
-                    <a href="regels/factions.html" class="button">Factions Regels</a>
-                </div>
+                <!-- Voeg alle andere artikelen en regels hier in zoals beschreven -->
+                
+                <h3>Overtredingen en Sancties</h3>
+                <p>Bij overtreding van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban, of permanente bans, afhankelijk van de ernst van de overtreding. Elk staff lid heeft het recht om zelf te bepalen welke straf voor jou gepast is.</p>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
